# tinymesh

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Pipfile  README.md  build.py  build_exts.py  clang-format.sh  environment.yaml  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cmake.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: FindEigen3.cmake  FindGoogleTest.cmake  Macros.cmake
data/: .gitignore  get_large_meshes.py
data/models/: bunny.ply  bunny_mini.ply  fandisk.ply  torus.ply
examples/: CMakeLists.txt  example_denoise.cpp  example_parameterize.cpp  example_read_write.cpp  example_remesh.cpp  example_simplify.cpp  example_smooth.cpp
examples/cpp/: CMakeLists.txt  example_denoise.cpp  example_hole_fill.cpp  example_remesh.cpp  example_simplify.cpp  example_smooth.cpp
examples/hello_tinymesh/: main.cpp
examples/python/: construct.ipynb  construct.py  curvatures.ipynb  denoise.ipynb  denoise.py  feature_line_fields.ipynb  fill_and_fair.ipynb  fill_and_fair.py  heat_kernel_signatures.ipynb  hole_filling.ipynb  laplace_beltrami.ipynb  viewer.py
examples/read_write/: main.cpp
examples/remesh/: main.cpp
examples/simplify/: main.cpp
examples/smooth/: main.cpp
src/: CMakeLists.txt  pybind11.cpp
src/tinymesh/: CMakeLists.txt  common.h  face.cpp  face.h  halfedge.cpp  halfedge.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  point.cpp  point.h  remesh.cpp  remesh.h  simplify.cpp  simplify.h  smooth.cpp  smooth.h  tinymesh.h  vector.cpp  vector.h  vertex.cpp  vertex.h
src/tinymesh/core/: api.h  bounds.h  bvh.cpp  bvh.h  common.h  completion.cpp  debug.h  edge.cpp  edge.h  eigen.cpp  eigen.h  external.cpp  face.cpp  face.h  filesystem.h  halfedge.cpp  halfedge.h  mesh.cpp  mesh.h  openmp.h  progress.h  triangle.cpp  triangle.h  types.h  utils.h  vec.cpp  vec.h  vertex.cpp  vertex.h
src/tinymesh/filters/: denoise.cpp  filters.h  smooth.cpp
src/tinymesh/geoproc/: hole_fill.cpp  hole_fill.h  remesh.cpp  remesh.h  simplify.cpp  simplify.h  smooth.cpp  smooth.h
src/tinymesh/math/: matrix.cpp  matrix.h
src/tinymesh/ops/: features.cpp  metrics.cpp  operators.cpp  ops.h
src/tinymesh/paramet/: abfxx.cpp  abfxx.h
src/tinymesh/parameterize/: abfxx.cpp
src/tinymesh/polymesh/: edge.cpp  edge.h  face.cpp  face.h  halfedge.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h
src/tinymesh/remesh/: hole_fill.cpp  remesh.cpp  remesh.h  simplify.cpp
src/tinymesh/restore/: completion.cpp  restore.h
src/tinymesh/trimesh/: face.cpp  face.h  halfedge.cpp  halfedge.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h
src/tinymesh/utils/: features.cpp  operators.cpp  utils.h
tests/: CMakeLists.txt  test_config.h.in  test_filters.cpp  test_mesh.cpp  test_ops.cpp  test_remesh.cpp  test_utils.h  test_vec.cpp
tests/python/: test_construct.py  test_filters.py  test_ops.py  test_remesh.py
tests/test_core/: test_vec.cpp
tests/test_math/: test_matrix.cpp
tests/test_python/: test_construct.py
tests/test_trimesh/: test_mesh.cpp
