[build-system]
requires = ["setuptools>=42", "poetry_core>=1.0.0", "pybind11~=2.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tinymesh"
version = "0.2.2"
description = "TinyMesh: a light-weight mesh processing library"

license = "MPL-v2"

authors = ["Tatsuya Yatagawa <tatsy.mail@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/tatsy/tinymesh"
homepage = "https://github.com/tatsy/tinymesh"

keywords = ['graphics', 'geometry']

build = "build.py"
exclude = ["src/*", "tests/*", "cmake/*", "data/*", "figures/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
setuptools = "^57.4.0"
pybind11 = "^2.10.1"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.10.1"
pytest = "^7.2.0"
jupyterlab = "^3.5.0"
open3d = ">=0.12.1"
scipy = "^1.9.3"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
