[build-system]
requires = ["setuptools>=42", "poetry_core>=1.0.0", "pybind11>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tinymesh"
version = "0.2.3"
description = "TinyMesh: a light-weight mesh processing library"

license = "MPL-v2"

authors = ["Tatsuya Yatagawa <tatsy.mail@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/tatsy/tinymesh"
homepage = "https://github.com/tatsy/tinymesh"

keywords = ['graphics', 'geometry']
exclude = ["src/*", "tests/*", "cmake/*", "data/*", "figures/*"]

[tool.poetry.build]
script = "build_exts.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.6,<=3.12"
setuptools = "^57"
pybind11 = "^2"

[tool.poetry.group.dev.dependencies]
yapf = "*"
flake8 = "*"
mypy = "*"
isort = "*"
pytest = "*"
jupyterlab = "*"
scipy = "*"
numpy = "*"
matplotlib = "*"
open3d = "^0.15"
