[build-system]
requires = ["setuptools", "poetry_core>=1.5.0", "pybind11>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tinymesh"
version = "0.2.3"
description = "TinyMesh: a light-weight mesh processing library"

license = "MPL-v2"

authors = ["Tatsuya Yatagawa <tatsy.mail@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/tatsy/tinymesh"
homepage = "https://github.com/tatsy/tinymesh"

keywords = ['graphics', 'geometry']
exclude = ["src/*", "tests/*", "cmake/*", "data/*", "figures/*"]

[tool.poetry.build]
script = "build_exts.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
setuptools = "^57"
pybind11 = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "*"
isort = "*"
pytest = "*"
jupyterlab = "*"
scipy = "*"
numpy = "*"
matplotlib = "*"

[tool.isort]
profile = "black"
length_sort = "True"
line_length = 120

[tool.mypy]
python_version = 3.9
follow_imports = "silent"
disallow_any_generics = "True"
strict_optional = "True"
check_untyped_defs = "True"
allow_redefinition = "True"

[tool.flake8]
max-line-length = 120
ignore = "Q000,E127,E203,E402,W503,W504"

[tool.black]
target-version = ["py39", "py310", "py311"]
line-length = 120
